﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 1.003001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑1 -2 (recommends: +1, suggests: ↑2)
 - test: +1 (recommends: ↑2)

1.003001 2014-09-24T06:28:04Z
 [Bugfix]
 - Don't call unname on devices where there is no uname.

 [Dependencies::Stats]
 - Dependencies changed since 1.003000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +1
 - test: (recommends: ↑1)

1.003000 2014-09-03T22:13:41Z
 [00 Minor]
 - Internals.
 - Tests.

 [Bugfix]
 - BuiltWith::All could crash trying to load some invalid module names it erroneously thought existed by traversing the
   global stash.

 [Dependencies::Stats]
 - Dependencies changed since 1.002000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +2
 - test: +2

 [Internals]
 - dump_config impemented with config_dumper

 [Tests]
 - Tests reimplented in dztest

1.002000 2014-08-18T03:26:39Z
 [00 Minor]
 - use JSON::MaybeXS instead of JSON

 [Dependencies::Stats]
 - Dependencies changed since 1.001001, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - runtime: +1 -1

1.001001 2014-08-15T21:17:00Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: -3

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update reportprereqs test

1.001000 2014-07-30T13:22:16Z
 [00 Major]
 - Added tests
 - Prereqs retrieved directly from Dist::Zilla now *WITHOUT* using EmulatePhase.
 - x_BuiltWith keys now added during META.* write out, which happens after prereqs finalization, by currying the
   FromCode coderef and injecting the data raw and de/reserializing.

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - configure: ↓1