@@ -24,6 +24,7 @@ issues = 1
 show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
+use_external_file = only
 
 [Git::Contributors / @Author::KENTNL/Git::Contributors]
 :version = 0.006
