@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.003002
+1.004000
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 6.98 → 7.04
 
