@@ -5,7 +5,12 @@
  - Dependencies changed since 1.003001, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +6 ↑1 -2 (recommends: +1, suggests: ↑2)
+ - runtime: +3
  - test: +1 (recommends: ↑2)
+
+ [Feature]
+ - Can now remove the data from META.* and export into a single file on its own using 'use_external_file = only'.
+ - File will be a name of user choice but defaults to 'misc/built_with.json'
 
 1.003001 2014-09-24T06:28:04Z
  [Bugfix]
